add meta tag author and description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Pedro Euzebio" />
+    <meta
+      name="description"
+      content="O projeto é um site desktop para montar planos de viagem com amigos, registrar atividades e links úteis. Esse é um dos projetos do evento NLW Journey, um dos conteúdos disponíveis para alunos da Rocketseat."
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
