--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
+
     <title>plann.er</title>
   </head>
   <body class="bg-zinc-950 text-zinc-50 antialiased">
